force-app/main/default/objects/Aircraft__c/fields/Aircraft_Model__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Model__c</fullName>
    <inlineHelpText>Airbus A320</inlineHelpText>
    <label>Aircraft Model</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>