force-app/main/default/objects/Aircraft__c/validationRules/Manufacture_Date_Cannot_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacture_Date_Cannot_Be_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Manufacture_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Manufacture_Date__c</errorDisplayField>
    <errorMessage>Manufacture Date cannot be in the future.</errorMessage>
</ValidationRule>