force-app/main/default/objects/Aircraft__c/validationRules/Total_Seats_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Seats_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Seats__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Seats__c</errorDisplayField>
    <errorMessage>Total Seats must be greater than zero.</errorMessage>
</ValidationRule>