force-app/main/default/objects/Aircraft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Aircraft_Model__c</columns>
    <columns>Total_Seats__c</columns>
    <columns>Aircraft_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>